# Saturn

./: .gitignore  README.md  build-cl-deps.lsp  io.github.kolunmi.Saturn.json  meson.build  net.kolunmi.Saturn.json  saturn-cl-deps.asd  update-deps.sh
.github/workflows/: build-flatpak.yml
data/: io.github.kolunmi.Saturn.desktop.in  io.github.kolunmi.Saturn.gschema.xml  io.github.kolunmi.Saturn.metainfo.xml.in  io.github.kolunmi.Saturn.service.in  meson.build  net.kolunmi.Saturn.desktop.in  net.kolunmi.Saturn.gschema.xml  net.kolunmi.Saturn.metainfo.xml.in  net.kolunmi.Saturn.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: internal.lsp  main.c  meson.build  saturn-application.c  saturn-application.h  saturn-provider.c  saturn-provider.h  saturn-threadsafe-list-store.c  saturn-threadsafe-list-store.h  saturn-window.blp  saturn-window.c  saturn-window.h  saturn.gresource.xml  util.h
src/gtk/: style.css
src/providers/: meson.build
src/providers/appinfo/: provider.c  provider.h
src/providers/fs/: provider.c  provider.h
src/providers/lsp/: internal.lsp  meson.build  provider.c  provider.h  saturn-cl-selection-event.c  saturn-cl-selection-event.h  saturn-generic-result.c  saturn-generic-result.h  saturn-signal-widget.c  saturn-signal-widget.h
src/providers/lsp/default/: appinfo.lsp  brew.lsp  calc.lsp  color.lsp  emoji.lsp  enchant.lsp  eval.lsp  fs.lsp  grep.lsp  history.lsp
src/providers/lsp/source-completions/: meson.build  saturn-cl-completion-proposal.c  saturn-cl-completion-proposal.h  saturn-cl-completion-provider.c  saturn-cl-completion-provider.h
